# ezshop-test

./: README.md
backend/: .gitignore  data.json  pyproject.toml
backend/src/ezshop_test/: main.py
backend/src/ezshop_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .gitignore  biome.json  copy.mjs  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/add/: page.tsx
frontend/src/lib/: CarretDown.tsx  CarretUp.tsx  Clip.tsx  Cross.tsx  ImageForm.tsx  ImageItem.tsx  ListView.tsx  MainForm.tsx  PreviewImage.tsx  files.ts  store.ts
